// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ValidatorRow /> renders Validators row without cumulative stake 1`] = `
<tr
  className="jsx-4079813474 table-row validator-nodes-row mx-0 "
>
  <td
    className="jsx-1618374794 collapse-row-arrow"
    onClick={[Function]}
  >
    <img
      className="jsx-1991982184"
      src="/static/images/icon-maximize.svg"
      style={
        Object {
          "width": "16px",
        }
      }
    />
  </td>
  <td
    className="jsx-1991982184 order"
  >
    2
  </td>
  <td
    className="jsx-1991982184"
  >
    <div
      className="align-items-center row no-gutters"
    >
      <div
        className="validators-node-label col-2"
      >
        <span
          className="validating-label kickout badge"
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          Leaving
        </span>
      </div>
      <div
        className="validator-name col"
      >
        <div
          className="row no-gutters"
        >
          <div
            className="validator-nodes-text col"
            title="@dokiacapital.pool.6fb1358"
          >
            dokiacapital.pool.6fb1358
          </div>
        </div>
        <div
          className="row no-gutters"
        >
          <div
            className="validator-nodes-text validator-node-pub-key col"
            title="ed25519:935JMz1vLcJxFApG3TY4MA4RHhvResvoGwCrQoJxHPn9"
          >
            ed25519:935JMz1vLcJxFApG3TY4MA4RHhvResvoGwCrQoJxHPn9
          </div>
        </div>
      </div>
    </div>
  </td>
  <td
    className="jsx-1991982184"
  >
    10%
  </td>
  <td
    className="jsx-1991982184"
  >
    11
  </td>
  <td
    className="jsx-1991982184 text-right validator-nodes-text stake-text"
  >
    <span
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      91,037.77039

      NEAR
    </span>
    <br
      className="jsx-1618374794"
    />
    <small
      className="jsx-1618374794"
    >
      +
      <span
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        4,701,218.17312

        NEAR
      </span>
    </small>
  </td>
  <td
    className="jsx-1618374794"
  >
    <div
      className="jsx-1486326988 cumulative-stake-chart"
    >
      <div
        className="jsx-1486326988 total-value"
        style={
          Object {
            "width": "-100%",
          }
        }
      />
      <div
        className="jsx-1486326988 current-value"
        style={
          Object {
            "width": "0%",
          }
        }
      />
      <div
        className="jsx-1486326988 cumulative-stake-label"
      >
        N/A
      </div>
    </div>
  </td>
</tr>
`;

exports[`<ValidatorRow /> renders full Validators row 1`] = `
Array [
  <tr
    className="jsx-4079813474 table-row validator-nodes-row mx-0 "
  >
    <td
      className="jsx-1618374794 collapse-row-arrow"
      onClick={[Function]}
    >
      <img
        className="jsx-1991982184"
        src="/static/images/icon-maximize.svg"
        style={
          Object {
            "width": "16px",
          }
        }
      />
    </td>
    <td
      className="jsx-1991982184 order"
    >
      1
    </td>
    <td
      className="jsx-1991982184"
    >
      <div
        className="align-items-center row no-gutters"
      >
        <div
          className="validators-node-label col-2"
        >
          <span
            className="validating-label active badge"
            onBlur={[Function]}
            onFocus={[Function]}
            onMouseOut={[Function]}
            onMouseOver={[Function]}
          >
            Active
          </span>
        </div>
        <div
          className="validator-name col"
        >
          <div
            className="row no-gutters"
          >
            <div
              className="validator-nodes-text col"
              title="@dokiacapital.pool.6fb1358"
            >
              dokiacapital.pool.6fb1358
            </div>
          </div>
          <div
            className="row no-gutters"
          >
            <div
              className="validator-nodes-text validator-node-pub-key col"
              title="ed25519:935JMz1vLcJxFApG3TY4MA4RHhvResvoGwCrQoJxHPn9"
            >
              ed25519:935JMz1vLcJxFApG3TY4MA4RHhvResvoGwCrQoJxHPn9
            </div>
          </div>
        </div>
      </div>
    </td>
    <td
      className="jsx-1991982184"
    >
      10%
    </td>
    <td
      className="jsx-1991982184"
    >
      11
    </td>
    <td
      className="jsx-1991982184 text-right validator-nodes-text stake-text"
    >
      <span
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        91,037.77039

        NEAR
      </span>
      <br
        className="jsx-1618374794"
      />
      <small
        className="jsx-1618374794"
      >
        +
        <span
          onBlur={[Function]}
          onFocus={[Function]}
          onMouseOut={[Function]}
          onMouseOver={[Function]}
        >
          4,701,218.17312

          NEAR
        </span>
      </small>
    </td>
    <td
      className="jsx-1991982184"
    >
      <div
        className="jsx-1486326988 cumulative-stake-chart"
      >
        <div
          className="jsx-1486326988 total-value"
          style={
            Object {
              "width": "0%",
            }
          }
        />
        <div
          className="jsx-1486326988 current-value"
          style={
            Object {
              "width": "100%",
            }
          }
        />
        <div
          className="jsx-1486326988 cumulative-stake-label"
        >
          100%
        </div>
      </div>
    </td>
  </tr>,
  <tr
    className="jsx-1991982184 cumulative-stake-holders-row"
  >
    <td
      className="jsx-1991982184 warning-text text-center"
      colSpan={7}
    >
      Validators 1 -
      1
       hold a cumulative stake above 33%. Delegating to the validators below improves the decentralization of the network.
    </td>
  </tr>,
]
`;

exports[`<ValidatorRow /> renders simple Validators row 1`] = `
<tr
  className="jsx-4079813474 table-row validator-nodes-row mx-0 "
>
  <td
    className="jsx-1618374794 collapse-row-arrow"
    onClick={[Function]}
  >
    <img
      className="jsx-1618374794"
      src="/static/images/icon-maximize.svg"
      style={
        Object {
          "width": "16px",
        }
      }
    />
  </td>
  <td
    className="jsx-1618374794 order"
  >
    3
  </td>
  <td
    className="jsx-1618374794"
  >
    <div
      className="align-items-center row no-gutters"
    >
      <div
        className="validators-node-label col-2"
      />
      <div
        className="validator-name col"
      >
        <div
          className="row no-gutters"
        >
          <div
            className="validator-nodes-text col"
            title="@dokiacapital.pool.6fb1358"
          >
            dokiacapital.pool.6fb1358
          </div>
        </div>
        <div
          className="row no-gutters"
        >
          <div
            className="validator-nodes-text validator-node-pub-key col"
            title="ed25519:935JMz1vLcJxFApG3TY4MA4RHhvResvoGwCrQoJxHPn9"
          >
            ed25519:935JMz1vLcJxFApG3TY4MA4RHhvResvoGwCrQoJxHPn9
          </div>
        </div>
      </div>
    </div>
  </td>
  <td
    className="jsx-1618374794"
  >
    10%
  </td>
  <td
    className="jsx-1618374794"
  >
    11
  </td>
  <td
    className="jsx-1618374794 text-right validator-nodes-text stake-text"
  >
    <span
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseOut={[Function]}
      onMouseOver={[Function]}
    >
      91,037.77039

      NEAR
    </span>
    <br
      className="jsx-1618374794"
    />
    <small
      className="jsx-1618374794"
    >
      +
      <span
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseOut={[Function]}
        onMouseOver={[Function]}
      >
        4,701,218.17312

        NEAR
      </span>
    </small>
  </td>
  <td
    className="jsx-1618374794"
  >
    <div
      className="jsx-1486326988 cumulative-stake-chart"
    >
      <div
        className="jsx-1486326988 total-value"
        style={
          Object {
            "width": "-100%",
          }
        }
      />
      <div
        className="jsx-1486326988 current-value"
        style={
          Object {
            "width": "0%",
          }
        }
      />
      <div
        className="jsx-1486326988 cumulative-stake-label"
      >
        N/A
      </div>
    </div>
  </td>
</tr>
`;
